--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 server.port = 8080
 server.servlet.context-path = /ShopmeAdmin
+
+# Database connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.username=root
+spring.datasource.password=password
+
+# Hibernate dialect for MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Other Hibernate properties
+# For example, show SQL queries in the console for debugging purposes
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+
+
