--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Other Hibernate properties
 # For example, show SQL queries in the console for debugging purposes
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 
