--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -17,6 +17,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/net.sf.supercsv/super-csv -->
+		<dependency>
+			<groupId>net.sf.supercsv</groupId>
+			<artifactId>super-csv</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 
 	</dependencies>
 
