--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -24,6 +24,21 @@
 			<version>2.4.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.30</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
