--- a/ShopmeProject/ShopmeWebParent/pom.xml
+++ b/ShopmeProject/ShopmeWebParent/pom.xml
@@ -101,6 +101,14 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.1.2.RELEASE</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.shopme</groupId>
